--- a/Resources/Public/Less/Theme/carousel.less
+++ b/Resources/Public/Less/Theme/carousel.less
@@ -116,6 +116,12 @@
             }
         }
     }
+    .carousel-indicators {
+        li {
+            margin-left: 3px;
+            margin-right: 3px;
+        }
+    }
     .carousel-control,
     .carousel-indicators {
         .transition(opacity .4s ease-in-out 0s);
